edit and update feature

--- a/templates/add_page.html
+++ b/templates/add_page.html
@@ -18,12 +18,12 @@
 <body>
     <script type="text/javascript" type="text/javascript">
         function check_validity(){
-            document.addform.submit();
+            document.add_form.submit();
         }
     </script>
 
     <div id="set" class="container">
-    <form id="addform" name="addform" action="/add_new" method="POST">
+    <form id="add_form" name="add_form" action="/marknote/add_byurl" method="POST">
             <legend><h3>add new bookmark or keynote</h3></legend>
             <input class="input-xlarge" type="text" placeholder="title" id="title" name="title"><br/>
             <input class="input-xlarge" type="text" placeholder="the url" id="link" name="link"><br/>
