--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -2,93 +2,131 @@
 <html>
 <head>
     <title>KeyNote</title>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="{{url_for('static',filename='images/favicon.ico')}}" />
     <!-- Bootstrap -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" media="screen">
     <style>
         div#pageheader{
             text-align: center;
         }
+        div#main{
+            width: 70%;
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
     <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.8.3.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static',filename='jquery-1.10.2.min.js')}}"></script>
     <script type="text/javascript">
+        var islink = false;
+
         $(document).ready(function(){
             $('.tohide').hide();
         });
 
         function unfold(collid){
+            if(islink){
+                islink = false;
+                return;
+            }
             $(collid).toggle(200);
         }
+        
+        function del_confirm(noteid){
+            var r=confirm("Sure to delete it?");
+            if(r){
+                location.href="/marknote/delete/"+noteid;
+            }
+        }
+
+        function click_link(){
+            islink = true;
+        }
+
     </script>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script>
+        window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '635660229802178', // App ID
+          status     : true, // check login status
+          cookie     : true, // enable cookies to allow the server to access the session
+          xfbml      : true  // parse XFBML
+        });
+
+        FB.Event.subscribe('auth.authResponseChange', function(response) {
+          if(response.status === 'connected') {
+            FB.api('/me');
+          }
+          else{
+            FB.login();
+          }
+        });
+        };
+
+        // Load the SDK asynchronously
+        (function(d){
+         var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement('script'); js.id = id; js.async = true;
+         js.src = "//connect.facebook.net/en_US/all.js";
+         ref.parentNode.insertBefore(js, ref);
+        }(document));
+    </script>
+
     <div class="page-header" id="pageheader" >
-            <h1>{{tag}}</h1>
+        <h1>search: {{term}} options| {{options}}</h1>
     </div>
     <div class="container-fluid">
-        <div class="row">
-            <div class="span4">
-                <div>
-                    <button type="button" class="btn btn-primary btn-large" onclick="location.href='/add_page'">Add</button>
-                </div>
-                <br />
-                <div>
-                    <form action="/marknote/search" method="GET">
-                        <input type="text" placeholder="search" id="search" name="search">
-                    </form>
-                </div>
+        <div class="row" id="main">
+            <div>
+                <a href="/marknote/time/1"><img src="{{url_for('static',filename='images/home.png')}}" /></a>
             </div>
-            <div class="span10">
+            <br />
+            <div class="span2">
+                <button type="button" class="btn btn-primary btn-large" onclick="location.href='/marknote/add_page'">Add</button>
+            </div>
+            <div class="span8">
                 <div>
-                    <button class="btn" onclick="location.href='/marknote'">Back</button>
+                    <button class="btn" onclick="history.back()">Back</button>
                 </div>
                 {% for row in data %}
                 <div class="row">
-                    <div class="span7 well well-small">
-                        <blockquote>
+                    <div class="span7 well well-small" >
+                        <blockquote onclick="unfold('#collapse{{row.id}}');">
                             {% if row.link != "" %}
-                                <h3><a href="{{row.link}}" target="_blank">{{row.title}}</a></h3>
+                            <h3><a href="{{row.link}}" onclick="click_link();" target="_blank">{{row.title}}</a></h3>
                             {% else %}
-                                <h3>{{row.title}}</h3>
+                            <h3>{{row.title}}</h3>
                             {% endif %}
 
-                            {% set tags = row.tag.split(',') %}
-                            {% if tags[0] != "" %}
-                                <a href="/marknote/tags/{{tags[0]}}">{{tags[0]}}</a>
-                                {% for tag in tags[1:] %}
-                                    {% if tag != '' %}
-                                     | <a href="/marknote/tags/{{tag}}">{{tag}}</a>
-                                    {% endif %}
-                                {% endfor %}
-                            {% endif %}
+                            {% set tags = row.tags.split(',') %}
+                            <small>
+                            {% for tag in tags[:-1] %}
+                                {% if tag == '' %}{% continue %}{% endif %}
+                                <a href="/marknote/tags/{{tag}}">{{tag}}</a>,
+                            {% endfor %}
+                                <a href="/marknote/tags/{{tags[-1]}}">{{tags[-1]}}</a>
+                            </small>
                         </blockquote>
                         {% set note = row.note.split("\n") %}
                         {% if note[0] != "" %}
                         <div id="collapse{{row.id}}" class="tohide">
-                            {% set isimg = False %}
                             {% set islink = False %}
-                            {% set imgn = 0 %}
-                            {% set imgs = row.img.split(',') %}
                             {% for a in note %}
-                                {% if '<img>' in a: %}
-                                    {% set isimg = True %}
-                                {% elif '</img>' in a: %}
-                                    {% set isimg = False %}
-                                {% elif '<link>' in a: %}
+                                {% if '<link>' in a %}
                                     {% set islink = True %}
-                                {% elif '</link>' in a: %}
+                                {% elif '</link>' in a %}
                                     {% set islink = False %}
-                                {% else : %}
-                                    {% if isimg : %}
-                                        <a href="{{url_for('static',filename='images/'+imgs[imgn])}}" target="_blank">
-                                        <img src="{{url_for('static',filename='images/'+imgs[imgn])}}" /></a><br />
-                                        {% set imgn = imgn+1 %}
-                                    {% elif islink : %}
-                                        {% if '|||' in a : %}
+                                {% else %}
+                                    {% if islink %}
+                                        {% if '|||' in a %}
                                             <a href="{{a[a.find('http'):]}}" target="_blank" >{{a[0:a.find('|||')]}}</a><br />
                                         {% else %}
                                             <a href="{{a}}" target="_blank" >link</a><br />
-                                        {% endif %} 
+                                        {% endif %}
                                     {% else %}
                                         {{a}}<br />
                                     {% endif %}
@@ -97,14 +135,45 @@
                         </div>
                         {% endif %}
                     </div>
-                    <div>
-                        <h5><a href="/edit/{{row.id}}"><img src="{{url_for('static',filename='edit.png')}}" /></a></h5>
-                    </div>
-                    <div>
-                        <h5><img src="{{url_for('static',filename='more.png')}}" onclick="unfold('#collapse{{row.id}}')"/></h5>
+                    <div class="row-span1">
+                        <div>
+                            <a href="#" id="share{{row.id}}" onclick="pop_over('#share{{row.id}}'); return false;"
+                               data-trigger="click" data-placement="right" data-html="true"
+                               data-content="<a href=&quot;#&quot; onclick=&quot;window.open(
+                                    'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent('{{row.link}}'), 
+                                    'facebook-share-dialog', 
+                                    'width=626,height=436'); 
+                                    return false;&quot;>
+                                    <img src=&quot;{{url_for('static',filename='images/facebook.png')}}&quot; /></a>
+                                    <a href=&quot;#&quot; onclick=&quot;window.open(
+                                    'https://twitter.com/intent/tweet?url='+encodeURIComponent('{{row.link}}'),
+                                    'twitter-tweet','width=640,height=257');return false;&quot;
+                                    class=&quot;twitter-share-button&quot;
+                                    >
+                                    <img src=&quot;{{url_for('static',filename='images/twitter.png')}}&quot; /></a>
+                                    ">
+                               <img src="{{url_for('static',filename='images/share.png')}}"/></a>
+                        </div>
+                        <div>
+                            <h5><a href="/marknote/edit_page/{{row.id}}"><img src="{{url_for('static',filename='images/edit.png')}}" /></a></h5>
+                        </div>
+                        <div>
+                            <h5><img src="{{url_for('static',filename='images/trash.png')}}" onclick="del_confirm({{row.id}})" /></h5>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
+            </div>
+            <div class="span4">
+                <div>
+                    <fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+                </div>
+                <br />
+                <div>
+                    <form action="/marknote/search" method="GET">
+                        <input type="text" placeholder="search" id="term" name="term" value="{{text}}">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
