--- a/templates/load.html
+++ b/templates/load.html
@@ -43,25 +43,24 @@
                     </div>
                     <div class="row-span1">
                         <div>
-                            <a href="#" id="share{{row.id}}" onclick="pop_over('#share{{row.id}}'); return false;"
-                               data-trigger="click" data-placement="right" data-html="true"
+                            <a href="#" id="share{{row.id}}"
+                               onclick="return false;"
+                               data-toggle="popover" data-placement="right" data-html="true"
                                data-content="<a href=&quot;#&quot; onclick=&quot;window.open(
                                     'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent('{{row.link}}'), 
-                                    'facebook-share-dialog', 
-                                    'width=626,height=436'); 
-                                    return false;&quot;>
+                                    'facebook-share-dialog', 'width=626,height=436'); return false;&quot;>
                                     <img src=&quot;{{url_for('static',filename='images/facebook.png')}}&quot; /></a>
                                     <a href=&quot;#&quot; onclick=&quot;window.open(
                                     'https://twitter.com/intent/tweet?url='+encodeURIComponent('{{row.link}}'),
-                                    'twitter-tweet','width=640,height=257');return false;&quot;
-                                    class=&quot;twitter-share-button&quot;
-                                    >
-                                    <img src=&quot;{{url_for('static',filename='images/twitter.png')}}&quot; /></a>
-                                    ">
-                               <img src="{{url_for('static',filename='images/share.png')}}"/></a>
+                                    'twitter-tweet', 'width=640,height=257');return false;&quot;
+                                    class=&quot;twitter-share-button&quot;>
+                                    <img src=&quot;{{url_for('static',filename='images/twitter.png')}}&quot; /></a>">
+                            <img src="{{url_for('static',filename='images/share.png')}}"/></a>
+                            <script type="text/javascript">$("#share{{row.id}}").popover();</script>
                         </div>
                         <div>
-                            <h5><a href="/marknote/edit_page/{{row.id}}"><img src="{{url_for('static',filename='images/edit.png')}}" /></a></h5>
+                            <h5><a href="/marknote/edit_page/{{row.id}}?next={{current_url}}">
+                            <img src="{{url_for('static',filename='images/edit.png')}}" /></a></h5>
                         </div>
                         <div>
                             <h5><img src="{{url_for('static',filename='images/trash.png')}}" onclick="del_confirm({{row.id}})" /></h5>
