--- a/templates/add_page.html
+++ b/templates/add_page.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>KeyNote</title>
+    <title>MarkNote</title>
+    <link rel="icon" type="image/vnd.microsoft.icon" href="{{url_for('static',filename='images/favicon.ico')}}" />
     <!-- Bootstrap -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" media="screen">
     <style>
