--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>KeyNote</title>
+    <title>MarkNote</title>
     <link rel="icon" type="image/vnd.microsoft.icon" href="{{url_for('static',filename='images/favicon.ico')}}" />
     <!-- Bootstrap -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" media="screen">
@@ -15,11 +15,8 @@
             margin-right: auto;
         }
     </style>
-    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static',filename='jquery-1.10.2.min.js')}}"></script>
-    <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-tooltip.js"></script>
-    <script src="http://w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-popover.js"></script>
-
+    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/js/bootstrap.min.js')}}"></script>
     <script type="text/javascript">
         var w = $(window);
         var d = $(document);
@@ -27,13 +24,9 @@
         var orderby = "{{orderby}}";
         var islink = false;
 
-        $(document).ready(function(){
+        d.ready(function(){
             $(".tohide").hide();
         });
-
-        function pop_over(shareid){
-            $(shareid).popover("toggle");
-        }
 
         function unfold(collid){
             if(islink){
@@ -67,41 +60,40 @@
         }
         
         w.scroll(at_bottom);
-
     </script>
 </head>
 <body>
+    <!-- Facebook -->
     <div id="fb-root"></div>
     <script>
         window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '635660229802178', // App ID
-          status     : true, // check login status
-          cookie     : true, // enable cookies to allow the server to access the session
-          xfbml      : true  // parse XFBML
-        });
+            FB.init({
+                appId      : '635660229802178', // App ID
+                status     : true, // check login status
+                cookie     : true, // enable cookies to allow the server to access the session
+                xfbml      : true  // parse XFBML
+            });
 
-        FB.Event.subscribe('auth.authResponseChange', function(response) {
-          if(response.status === 'connected') {
-            FB.api('/me');
-          }
-          else{
-            FB.login();
-          }
-        });
+            FB.Event.subscribe('auth.authResponseChange', function(response) {
+                if(response.status === 'connected') {
+                    FB.api('/me');
+                }
+                else{
+                    FB.login();
+                }
+            });
         };
 
         // Load the SDK asynchronously
         (function(d){
-         var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement('script'); js.id = id; js.async = true;
-         js.src = "//connect.facebook.net/en_US/all.js";
-         ref.parentNode.insertBefore(js, ref);
+            var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement('script'); js.id = id; js.async = true;
+            js.src = "//connect.facebook.net/en_US/all.js";
+            ref.parentNode.insertBefore(js, ref);
         }(document));
-
-
     </script>
+    <!-- Twitter -->
     <script>
         (function(d,s,id){
             var js,fjs=d.getElementsByTagName(s)[0];
@@ -113,10 +105,10 @@
             }
         }(document,"script","twitter-wjs"));
     </script>
+
     <div class="page-header" id="pageheader">
             <h1>Simple bookmark and keynote</h1>
     </div>
-
     <div class="container-fluid">
         <div class="row" id="main">
             <div class="span2">
@@ -160,7 +152,7 @@
                     <div class="span7 well well-small">
                         <blockquote onclick="unfold('#collapse{{row.id}}');">
                             {% if row.link != "" %}
-                            <h3><a href="{{row.link}}" target="_blank" onclick="click_link()">{{row.title}}</a></h3>
+                            <h3><a href="{{row.link}}" target="_blank" onclick="click_link();">{{row.title}}</a></h3>
                             {% else %}
                             <h3>{{row.title}}</h3>
                             {% endif %}
@@ -169,9 +161,9 @@
                             <small>
                             {% for tag in tags[:-1] %}
                                 {% if tag == '' %}{% continue %}{% endif %}
-                                <a href="/marknote/tags/{{tag}}">{{tag}}</a>,
+                                <a href="/marknote/tags/{{tag}}" onclick="click_link();">{{tag}}</a>,
                             {% endfor %}
-                                <a href="/marknote/tags/{{tags[-1]}}">{{tags[-1]}}</a>
+                                <a href="/marknote/tags/{{tags[-1]}}" onclick="click_link();">{{tags[-1]}}</a>
                             </small>
                         </blockquote>
                         {% set note = row.note.split("\n") %}
@@ -200,25 +192,24 @@
                     </div>
                     <div class="row-span1">
                         <div>
-                            <a href="#" id="share{{row.id}}" onclick="pop_over('#share{{row.id}}'); return false;"
-                               data-trigger="click" data-placement="right" data-html="true"
+                            <a href="#" id="share{{row.id}}"
+                               onclick="return false;"
+                               data-toggle="popover" data-placement="right" data-html="true"
                                data-content="<a href=&quot;#&quot; onclick=&quot;window.open(
                                     'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent('{{row.link}}'), 
-                                    'facebook-share-dialog', 
-                                    'width=626,height=436'); 
-                                    return false;&quot;>
+                                    'facebook-share-dialog', 'width=626,height=436'); return false;&quot;>
                                     <img src=&quot;{{url_for('static',filename='images/facebook.png')}}&quot; /></a>
                                     <a href=&quot;#&quot; onclick=&quot;window.open(
                                     'https://twitter.com/intent/tweet?url='+encodeURIComponent('{{row.link}}'),
-                                    'twitter-tweet','width=640,height=257');return false;&quot;
-                                    class=&quot;twitter-share-button&quot;
-                                    >
-                                    <img src=&quot;{{url_for('static',filename='images/twitter.png')}}&quot; /></a>
-                                    ">
-                               <img src="{{url_for('static',filename='images/share.png')}}"/></a>
+                                    'twitter-tweet', 'width=640,height=257');return false;&quot;
+                                    class=&quot;twitter-share-button&quot;>
+                                    <img src=&quot;{{url_for('static',filename='images/twitter.png')}}&quot; /></a>">
+                            <img src="{{url_for('static',filename='images/share.png')}}"/></a>
+                            <script type="text/javascript">$("#share{{row.id}}").popover();</script>
                         </div>
                         <div>
-                            <h5><a href="/marknote/edit_page/{{row.id}}"><img src="{{url_for('static',filename='images/edit.png')}}" /></a></h5>
+                            <h5><a href="/marknote/edit_page/{{row.id}}?next={{current_url}}">
+                            <img src="{{url_for('static',filename='images/edit.png')}}" /></a></h5>
                         </div>
                         <div>
                             <a href="#" onclick="del_confirm({{row.id}}); return false;"><img src="{{url_for('static',filename='images/trash.png')}}" /></a>
@@ -240,5 +231,5 @@
             </div>
         </div>
     </div>
-    </body>
+</body>
 </html>
